--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         <activity
             android:name=".BeverageActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity android:name=".BeverageListActivity"
+                  android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
