--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".BeverageActivity"
+            android:name=".BeveragePagerActivity"
             android:label="@string/app_name" >
         </activity>
         <activity android:name=".BeverageListActivity"
